# rs-backend

./: Cargo.toml  README.md
.github/workflows/: build.yaml  run.yaml  test.yaml
database/: app.db  machine-learning.json  react.json  test.db  test.json  typescript.json
src/: api.rs  database.rs  json.rs  main.rs  structs.rs
testing/: rust.json
