[package]
name = "rusty-backend"
version = "0.2.3"
edition = "2021"

[dependencies]
urlencoding="*"
reqwest = "0.12.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde={version = "1.0.213",  features = ["derive"] }
serde_json = "*"
tokio = { version = "1.41.0", features = ["full"] }
tokio-macros = "2.4.0"
